# n8n

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
app/: README.md  pyproject.toml  requirements.txt
app/health_toolkit/: __init__.py  cli.py  patient.py  units.py  vitals.py
app/tests/: test_patient.py  test_vitals.py
docs/: PROJECTS.md
