[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "health-toolkit"
version = "0.1.0"
description = "A small, runnable Python toolkit for common health-data tasks (BMI, blood pressure, FHIR patient parsing)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "zubair0153715" }]
keywords = ["health", "medical", "fhir", "bmi", "healthcare"]

[project.scripts]
health-toolkit = "health_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["health_toolkit*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
